cmake_minimum_required(VERSION 3.6)
project(ASD1_Labo04_CC1)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/cpp_standard_headers_indexer.cpp
        liste.cpp
        main.cpp)

add_executable(ASD1_Labo04_CC1 ${SOURCE_FILES})